fix: small centrality fixes

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1380,5 +1380,5 @@ l_english:
 # /
 
 	holding_tec_centrality_core_administration: "Core Representative Council"
-	holding_tec_centrality_core_administration_desc: "A resplendent building filled with bureaucrats representing the interests of [owner.overlord.GetName], helping them in the administration of the Core Sector."
+	holding_tec_centrality_core_administration_desc: "A resplendent building filled with bureaucrats representing the interests of the Core, helping them in the administration of the Core Sector."
 	holding_tec_centrality_core_administration_effect: "$MOD_COUNTRY_ADMIN_CAP_ADD$ increase by §G2§! per £planet£ Planet"
