more ascension changes and fixes, prep for psychic hive

--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -377,7 +377,7 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 	tec_subhabitat_engineering_realname:0 "Engineering Sub-Habitat"
 	tec_subhabitat_engineering:0 "$tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_engineering_DESC:0 "$tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS$"
-	tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art technical labs, it is specialized in §Y$tec_loc_society$§! production."
+	tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art technical labs, it is specialized in §Y$tec_loc_engineering$§! production."
 
 
 	TEC_SUBHABITAT_SCIENCE_NAME: "[FROM.from.planet.GetName] Scientific Sub-Habitat"
