--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -354,24 +354,24 @@
 
 
 # Old machinerf modifiers
-	machinerf_dry_tech_modifier:0 "§YUnlock feature:§ Solar-dust filters."
+	machinerf_dry_tech_modifier:0 "§YUnlock feature:§! Solar-dust filters."
 	machinerf_dry_tech_modifier_desc:0 "All mechanic units will work at §Y70% efficiency§! in §YDesert§!, §YArid§! and Savannah§! planets."
 	#machinerf_dry_tech_modifier_desc:0 "Ocean Habitability: §G+70%§!\nContinental Habitability: §G+70%§!\nTropical Habitability: §G+70%§!"
 	#machinerf_dry_tech_modifier_desc:1 "§Y All mechanic units will work at 60% efficiency in Desert, Arid and Savannah planets. §"
-	machinerf_wet_tech_modifier:0 "§YUnlock feature:§ Oxidation regulators."
+	machinerf_wet_tech_modifier:0 "§YUnlock feature:§! Oxidation regulators."
 	machinerf_wet_tech_modifier_desc:0 "All mechanic units will work at §Y70% efficiency§! in §GOcean§!, §GContinental§! and §GTropical§! planets. "
 	#machinerf_wet_tech_modifier_desc:1 "§Y All mechanic units will work at 60% efficiency in Ocean, Continental and Tropical planets. §"
-	machinerf_cold_tech_modifier:0 "§YUnlock feature:§ YHeat redirection."
+	machinerf_cold_tech_modifier:0 "§YUnlock feature:§! Heat redirection."
 	machinerf_cold_tech_modifier_desc:0 "All mechanic units will work at §Y70% efficiency§! in §BArctic§!, §BTundra§! and §BAlpine§! planets."
 
 	#machinerf_cold_tech_modifier_desc:1 "§Y All mechanic units will work at 60% efficiency in Arctic, Tundra and Alpine planets. §"
-	machinerf_nano_tech_modifier:0 "§YUnlock feature:§ Nanobot maintenance caretaking."
+	machinerf_nano_tech_modifier:0 "§YUnlock feature:§! Nanobot maintenance caretaking."
 	machinerf_nano_tech_modifier_desc:0 "All mechanic units will work at §G90% efficiency§! in foreign environments, except tomb worlds."
 	#machinerf_nano_tech_modifier_desc:1 "§B All mechanic units will work at 80% efficiency in foreign environments, except tomb worlds. §"
-	machinerf_bio_tech_modifier:0 "§YUnlock feature:§ Bio-robotic adaptation."
+	machinerf_bio_tech_modifier:0 "§YUnlock feature:§! Bio-robotic adaptation."
 	machinerf_bio_tech_modifier_desc:0 "All mechanic units will work at §B100% efficiency§! in every planet."
 	#machinerf_bio_tech_modifier_desc:1 "§B All mechanic units will work at 100% efficiency on every planet. §"
-	machinerf_nuked_tech_modifier:0 "§YUnlock feature:§ Anti-radiation exposure protocols."
+	machinerf_nuked_tech_modifier:0 "§YUnlock feature:§! Anti-radiation exposure protocols."
 	machinerf_nuked_tech_modifier_desc:0 "All mechanic units will work at §G80% efficiency§! in Tomb Worlds."
 	#machinerf_nuked_tech_modifier_desc:1 "§B All mechanic units will work at 80% efficiency in Tomb Worlds. §"
  
@@ -451,12 +451,12 @@
 	tech_machinerf_nuked_effect:0 "Tomb World Machine Performance: §G+90%§!"
 	tech_machinerf_nuked_ext_effect:0 "Tomb World Machine Performance: §Y+70%§!"
  
-	# tech_machinerf_dry_effect:0 "§YUnlock feature:§ §wSolar-dust filters\nAll mechanic units will work at §Y60% efficiency§ in §YDesert§, §YArid§ and §YSavannah§ planets."
-	# tech_machinerf_wet_effect:0 "§YUnlock feature:§ Oxidation regulators\nAll mechanic units will work at §Y60% efficiency§ in §GOcean§, §GContinental§ and §GTropical§ planets. "
-	# tech_machinerf_heat_effect:0 "§YUnlock feature:§ YHeat redirection\nAll mechanic units will work at §Y60% efficiency§ in §BArctic§, §BTundra§ and §BAlpine§ planets."
-	# tech_machinerf_nano_effect:0 "§YUnlock feature:§ Nanobot maintenance caretaking\nAll mechanic units will work at §G80% efficiency§ in foreign environments, except tomb worlds."
-	# tech_machinerf_bio_effect:0 "§YUnlock feature:§ Bio-obotic adaptation\nAll mechanic units will work at §B100% efficiency§ in every planet."
-	# tech_machinerf_nuked_effect:0 "§YUnlock feature:§ Anti-radiation exposure protocols\nAll mechanic units will work at §G80% efficiency§ in Tomb Worlds."
+	# tech_machinerf_dry_effect:0 "§YUnlock feature:§! §wSolar-dust filters\nAll mechanic units will work at §Y60% efficiency§! in §YDesert§, §YArid§! and §YSavannah§! planets."
+	# tech_machinerf_wet_effect:0 "§YUnlock feature:§! Oxidation regulators\nAll mechanic units will work at §Y60% efficiency§! in §GOcean§, §GContinental§! and §GTropical§! planets. "
+	# tech_machinerf_heat_effect:0 "§YUnlock feature:§! YHeat redirection\nAll mechanic units will work at §Y60% efficiency§! in §BArctic§, §BTundra§! and §BAlpine§! planets."
+	# tech_machinerf_nano_effect:0 "§YUnlock feature:§! Nanobot maintenance caretaking\nAll mechanic units will work at §G80% efficiency§! in foreign environments, except tomb worlds."
+	# tech_machinerf_bio_effect:0 "§YUnlock feature:§! Bio-obotic adaptation\nAll mechanic units will work at §B100% efficiency§! in every planet."
+	# tech_machinerf_nuked_effect:0 "§YUnlock feature:§! Anti-radiation exposure protocols\nAll mechanic units will work at §G80% efficiency§! in Tomb Worlds."
 
 #Planetary diversity
 
