--- a/localisation/english/zz_evolved_factions_l_english.yml
+++ b/localisation/english/zz_evolved_factions_l_english.yml
@@ -1350,19 +1350,19 @@
 
 	PROSPERITY_LOW_MILITARY:0 "Statecraft Budget Focus"
 	PROSPERITY_NO_LOW_MILITARY:0 "Statecraft Budget Focus"
-	PROSPERITY_LOW_MILITARY_DESC:0 "Keeping §YState Budget§! policy focused on §YStatecraft§ will please the [Root.GetName]."
+	PROSPERITY_LOW_MILITARY_DESC:0 "Keeping §YState Budget§! policy focused on §YStatecraft§! will please the [Root.GetName]."
 
 	PROSPERITY_NOT_BIG_MILITARY:0 "Regular Military Spendings"
 	PROSPERITY_BIG_MILITARY:0 "Lower Military Spendings"
-	PROSPERITY_NOT_BIG_MILITARY_DESC:0 "Keeping §YState Budget§! policy focused on §YMilitary§ displeases the [Root.GetName]."
+	PROSPERITY_NOT_BIG_MILITARY_DESC:0 "Keeping §YState Budget§! policy focused on §YMilitary§! displeases the [Root.GetName]."
 
 	IMPERIALIST_HIGH_MILITARY:0 "High Military Spendings"
 	IMPERIALIST_NO_HIGH_MILITARY:0 "Increase Military Spendings"
-	IMPERIALIST_HIGH_MILITARY_DESC:0 "Keeping §YState Budget§! policy focused on §YMilitary§ will please the [Root.GetName]."
+	IMPERIALIST_HIGH_MILITARY_DESC:0 "Keeping §YState Budget§! policy focused on §YMilitary§! will please the [Root.GetName]."
 
 	IMPERIALIST_NORMAL_MILITARY:0 "Regular Military Spendings"
 	IMPERIALIST_NO_NORMAL_MILITARY:0 "Increase Military Spendings"
-	IMPERIALIST_NORMAL_MILITARY_DESC:0 "Keeping §YState Budget§! policy focused on §YStatecraft§ displeases the [Root.GetName]." 
+	IMPERIALIST_NORMAL_MILITARY_DESC:0 "Keeping §YState Budget§! policy focused on §YStatecraft§! displeases the [Root.GetName]." 
 
 	IMPERIALIST_TRADITION:0 "Traditional Imperialism"
 	IMPERIALIST_NO_TRADITION:0 "Traditional Imperialism"
