subhabitat dismantle fix + more

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1066,7 +1066,7 @@ l_english:
 	district_tec_hab_food_effect_production:0 "This $tec_loc_district$ jobs increase the §Y$tec_loc_food$§! production of §YSubhabitats§! of its type (£food£)"
 	district_tec_hab_food_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Food Orbital Buildings§!."
 	district_tec_hab_food_effect_orbitals:0 ""
-	district_tec_hab_food_effect_subhabitats:0 "§HCurrent Subhabitats:§! $TABBED_NEW_LINE$ $tec_loc_minerals_icon$ §Y[tec_get_built_subhabitats_food]/[tec_get_max_subhabitats_food]§! (max) (§Y[solar_system.tec_get_built_subhabitats]§! built)\n\n"
+	district_tec_hab_food_effect_subhabitats:0 "§HCurrent Subhabitats:§! $TABBED_NEW_LINE$ $tec_loc_food_icon$ §Y[tec_get_built_subhabitats_food]/[tec_get_max_subhabitats_food]§! (max) (§Y[solar_system.tec_get_built_subhabitats]§! built)\n\n"
 	#"\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
 
 	# Utility
