--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -329,13 +329,14 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 	TOAST_TEC_SUBHABITAT_BUILT_DESC: "A $tec_subhabitat_standard_realname$ has been constructed in orbit of [target_planet.GetName]"
 
 	tec_subhabitat_standard:0 "Proxy Sub-Habitat"
+	tec_subhabitat_standard_plural:0 "Proxy Sub-Habitats"
 	tec_subhabitat_standard_realname:0 "Proxy Sub-Habitat"
 	tec_subhabitat_standard_NAME:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_standard_DESC:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_standard_MEGASTRUCTURE_DETAILS:0 "A massive station serving as operative proxy of the system central habitat.\nThe §YSub-Habitat§! will change based on the §Y£tec_deposit£ Harvestable Deposits§!, or produce §Y$tec_loc_food$§! on §HGas Giants§! and §YFrozen§! Worlds."
 	tec_subhabitat_standard_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$$tec_subhabitat_standard_requirements$ \n\n$EFFECTS_HEADER$ $NEW_LINE$$orbital_DELAYED_START$$tec_subhabitat_standard_effect$"
-	tec_subhabitat_standard_requirements: "$NEW_LINE$- Must be built in orbit of any planetary body with a resource deposit$NEW_LINE$- A max of 4 $tec_subhabitat_standard$ can be built per system"
-	tec_subhabitat_standard_effect: "§YPer habitat upgrade:§!\n$tt$- £mod_planet_max_districts_add£ $MOD_PLANET_MAX_DISTRICTS_ADD$: §G+1§!\n$tt$- £mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$: §G+0.50§!\n    - §YDepending on planetary deposit:§!\n$tt$- $mod_tec_subhabitat_research_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_energy_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_minerals_add$: §G+3§!"
+	tec_subhabitat_standard_requirements: "$NEW_LINE$- Must be built in orbit of any planetary body with a resource deposit$NEW_LINE$- A max of 3 $tec_subhabitat_standard$s can be built per system"
+	tec_subhabitat_standard_effect: "§YPer habitat upgrade:§!\n$tt$- £mod_planet_max_districts_add£ $MOD_PLANET_MAX_DISTRICTS_ADD$: §G+1§!\n$tt$- £mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$: §G+0.50§!\n    - §YDepending on planetary deposit:§!\n$tt$- $mod_tec_subhabitat_research_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_energy_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_minerals_add$: §G+3§!\n- §YSubhabitat Production:§!\n$tt$- $tec_loc_minerals_icon$ on $tec_loc_minerals_icon$ deposit\n$tt$- $tec_loc_energy_icon$ on $tec_loc_energy_icon$ deposit\n$tt$- $tec_loc_food_icon$ on £planet£ Gas Giants or Frozen Worlds\n$tt$- $tec_loc_research_resources_icon$ on $tec_loc_research_resources_icon$ deposit (per deposit)"
 
 	TEC_SUBHABITAT_ENERGY_NAME: "[FROM.from.planet.GetName] Generator Sub-Habitat"
 	tec_subhabitat_energy_realname:0 "Generator Sub-Habitat"
