feat: more centrality work

--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -452,8 +452,18 @@
 	tr_tec_centrality_3_autarchy_delayed:0 "Balancing economy will lead to controlling every aspect of it."
 
 	tr_tec_centrality_4:0 "Sovereign Satellites"
-	tr_tec_centrality_4_tooltip:0 "Unlocks the §Y$preset_tec_satellite$§! Vassal Type\n- $subject_integration$: §Y$subject_can_not_be_integrated$§!\n- $subject_diplomacy$: §Y$subject_can_do_diplomacy_but_not_vote$§!\n- $subject_expand$: §Y$subject_cannot_expand$§!\n- $joins_overlord_wars$: §Y$joins_overlord_wars_all$§!\n- $joins_subject_wars$: §Y$joins_subject_wars_all$§!\n- $subject_holdings_limit$: §Y$subject_holdings_limit_tec_satellite$§!\n- $subject_sensors$: §Y$subject_gets_sensors$§!\n- $resource_subsidies_basic$: §G15%§!\n- $resource_subsidies_advanced$: §G15%§!\n- $resource_subsidies_research$: §G15%§!\n- $resource_subsidies_strategic$: §G15%§!\n- Country does not count against §Y$divided_patronage$§!"
-	tr_tec_centrality_4_delayed:0 ""Empowering satellite regions as vassals, we cultivate loyal allies who share our vision, strengthening our influence and securing our dominion across the stars."
+	tr_tec_centrality_4_hive: "$tr_tec_centrality_4$"
+	tr_tec_centrality_4_no_overlord_dlc: "$tr_tec_centrality_4$"
+	tr_tec_centrality_4_hive_no_overlord_dlc: "$tr_tec_centrality_4$"
+	tr_tec_centrality_4_tooltip:0 "Unlocks the §Y$preset_tec_satellite$§! Vassal Type\n- $subject_integration$: §Y$subject_can_not_be_integrated$§!\n- $subject_diplomacy$: §Y$subject_can_do_diplomacy_but_not_vote$§!\n- $subject_expand$: §Y$subject_cannot_expand$§!\n- $joins_overlord_wars$: §Y$joins_overlord_wars_all$§!\n- $joins_subject_wars$: §Y$joins_subject_wars_all$§!\n- $subject_holdings_limit$: §Y$subject_holdings_limit_4$§!\n- $subject_sensors$: §Y$subject_gets_sensors$§!\n- $resource_subsidies_basic$: §G15%§!\n- $resource_subsidies_advanced$: §G15%§!\n- $resource_subsidies_research$: §G15%§!\n- Country does not count against §Y$divided_patronage$§!"
+	tr_tec_centrality_4_no_overlord_dlc_tooltip: "Unlocks the §Y$preset_tec_satellite$§! Vassal Type\n- $subject_integration$: §Y$subject_can_not_be_integrated$§!\n- $subject_diplomacy$: §Y$subject_can_do_diplomacy_but_not_vote$§!\n- $subject_expand$: §Y$subject_cannot_expand$§!\n- $joins_overlord_wars$: §Y$joins_overlord_wars_all$§!\n- $joins_subject_wars$: §Y$joins_subject_wars_all$§!\n- $subject_holdings_limit$: §Y$subject_holdings_limit_1$§!\n- $subject_sensors$: §Y$subject_gets_sensors$§!\n- $resource_subsidies_basic$: §G15%§!\n- $resource_subsidies_advanced$: §G15%§!\n- $resource_subsidies_research$: §G15%§!\n- Country does not count against §Y$divided_patronage$§!"
+	tr_tec_centrality_4_hive_tooltip:0 "§YSectors§! can be released as §YSubjects§!\n$tr_tec_centrality_4_tooltip$"
+	tr_tec_centrality_4_hive_no_overlord_dlc_tooltip:0 "§YSectors§! can be released as §YSubjects§!\n$tr_tec_centrality_4_no_overlord_dlc_tooltip$"
+
+	tr_tec_centrality_4_delayed:0 "Empowering satellite regions as vassals, we cultivate loyal allies who share our vision, strengthening our influence and securing our dominion across the stars."
+	tr_tec_centrality_4_no_overlord_dlc_delayed: "$tr_tec_centrality_4_delayed$"
+	tr_tec_centrality_4_hive_delayed: "$tr_tec_centrality_4_delayed$"
+	tr_tec_centrality_4_hive_no_overlord_dlc_delayed: "$tr_tec_centrality_4_delayed$"
 
 		tr_tec_centrality_final_1:0 "Administrative Overview"
 		tr_tec_centrality_final_1_text:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- Jobs from ['concept_tec_leader_buildings_icon'], ['concept_tec_manufacturing_booster_buildings'], ['concept_tec_booster_buildings_icon']: §Gx2§!"
