feat: work on centrality agenda

--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -98,7 +98,7 @@
 		council_agenda_agenda_tec_genetic_ascendancy_desc:0 "Genetic malformation and undesirable biological development are things we must overcome; with our dexterity in genetics and our genetic repository we can repair and improve those who lead us forward."
 		council_agenda_agenda_tec_genetic_ascendancy_effect_desc:0 "Removes §HNegative Traits§! from Organic Leaders.\n$tec_loc_ruler$ and $tec_loc_council_members$ are prioritized.\nFor each Trait removed, lose §R500§! experience (reduced by the §HEpigenetic Restoration Effectivity§!)."
 		# Levels
-			council_agenda_agenda_tec_genetic_ascendancy_tier_1:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects applicable to §G1§! $tec_loc_leader$§!"
+			council_agenda_agenda_tec_genetic_ascendancy_tier_1:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G1§! $tec_loc_leader$§!"
 			council_agenda_agenda_tec_genetic_ascendancy_tier_2:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G2§! $tec_loc_leaders$§!"
 			council_agenda_agenda_tec_genetic_ascendancy_tier_3:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G3§! $tec_loc_leaders$§!"
 			council_agenda_agenda_tec_genetic_ascendancy_tier_4:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G4§! $tec_loc_leaders$§!"
@@ -109,6 +109,10 @@
 		agenda_tec_genetic_ascendancy_desc:0 "$council_agenda_agenda_tec_genetic_ascendancy_desc$"
 
 		mod_tec_epigenetic_restoration_mult:0 "Epigenetic Restoration Effectivity"
+
+        council_agenda_tr_tec_centrality_consolidated_infrastructure_name: "Consolidated Infrastructure"
+        council_agenda_tr_tec_centrality_consolidated_infrastructure_decs: "Streamlining the vital areas of our empire with advanced systems and infrastructure, ensuring peak performance and efficiency where it matters most."
+        modifier_agenda_tr_tec_centrality_consolidated_infrastructure_finish: "$council_agenda_tr_tec_centrality_consolidated_infrastructure_name$ $agenda_ref$"
 	# /
  # /
  # Other
