--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -29,5 +29,6 @@ requires_ascension_perks_4:0 "$TRIGGER_FAIL$Requires 4 other Ascension Perks to 
  subject_tec_satellite: "$preset_tec_satellite$"
 
  not_allowed_for_tec_satellite: "$TRIGGER_FAIL$Not allowed for §Y$preset_tec_satellite$§! preset."
+ tec_satellite_vassal_not_allowed: "$TRIGGER_FAIL$Not allowed for §Y$preset_tec_satellite$§! Vassals."
 
  subject_tec_satellite_term: "This agreement does not count towards §Y$divided_patronage$§!"
