--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -640,4 +640,4 @@
  pm_tec_centrality_rim_planet_gestalt: "Fringe Planet"
  pm_tec_centrality_rim_planet_gestalt_desc: "This planet is receiving little to no administrative oversight from the core administration, its distance from it making deviancy a prime issue."
 
- pm_tec_centrality_rim_planet_tooltip: "This effect scales with distance from §Y£empire_capital£Core Sector§!"
+ pm_tec_centrality_rim_planet_tooltip: "This effect scales with distance from §Y£empire£Core Sector§!"
