more ascension changes

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -269,6 +269,7 @@
 
  #Situations	# TODO CODE REWORK - ICON
 	tec_loc_situation:0 "Situation"
+	tec_loc_situation_icon:0 "£stability£"
 
  # Espionage
 	tec_loc_espionage_interdiction_icon:0 "£trigger_tec_espionage_interdiction£"
@@ -445,7 +446,7 @@
 	tech_machinerf_dry_effect:0 "Desert Machine Performance: §Y+70%§!\nArid Machine Performance: §Y+70%§!\nSavannah Machine Performance: §Y+70%§!"
 	tech_machinerf_wet_effect:0 "Ocean Machine Performance: §Y+70%§!\nContinental Machine Performance: §Y+70%§!\nTropical Machine Performance: §Y+70%§!"
 	tech_machinerf_cold_effect:0 "Arctic Machine Performance: §Y+70%§!\nTundra Machine Performance: §Y+70%§!\nAlpine Machine Performance: §Y+70%§!"
-	tech_machinerf_nano_effect:0 "Hostile Environment Machine Performance: §G+90%§!\n§YNot functional in §!§RTomb Worlds§!§Y except for Determined exterminators.§!"
+	tech_machinerf_nano_effect:0 "Hostile Environment Machine Performance: §G+90%§!\n§YNot functional in §RTomb Worlds§! except for Determined exterminators.§!"
 	tech_machinerf_nano_ext_effect:0 "Hostile Environment Machine Performance: §G+90%§!"
 	tech_machinerf_bio_effect:0 "Machine Performance: §B+100%§! on every planet!\n"
 	tech_machinerf_nuked_effect:0 "Tomb World Machine Performance: §G+90%§!"
