--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -844,14 +844,14 @@
 				# 5	#
 				#####
 	# /
-	tradition_tec_psychic:0 "Psychic Prowess"
-	tradition_tec_psychic_desc:0 "Our mind is our foundation, whose pillars are constituted in our will - We are many, but we are one, we don't need external forces but our sheer mental power to guide us."
+	tradition_tec_psychics:0 "Psychic Prowess"
+	tradition_tec_psychics_desc:0 "Our mind is our foundation, whose pillars are constituted in our will - We are many, but we are one, we don't need external forces but our sheer mental power to guide us."
 
-	tr_tec_psychics_adopt:0 "$tradition_tec_psychic$ Traditions"
+	tr_tec_psychics_adopt:0 "$tradition_tec_psychics$ Traditions"
 	tr_tec_psychics_adopt_tooltip:0 "TO DO."
 	# Unlocks the psychic potential of 
 
-	tr_tec_psychics_finish:0 "$tradition_tec_psychic$ Traditions Finished"
+	tr_tec_psychics_finish:0 "$tradition_tec_psychics$ Traditions Finished"
 	tr_tec_psychics_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
 	# Unlocks psychic harmonization/disruption rituals, which alters reality based on the empire decisions.
 
