feat: work on centrality agenda

--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -665,6 +665,9 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
  d_tec_engineered_eco_ring_3:0 "Integrated Shipyards"
  d_tec_engineered_eco_ring_3_desc:0 "This Artificial Arcology suits a lot of low-gravity bays that serves greatly for naval and civil production."
 
+
+	d_tec_centrality_consolidated_infrastructure: "Consolidated Infrastructure"
+	d_tec_centrality_consolidated_infrastructure_desc: "Streamlined networks and unified structures enhance the planet's efficiency, transforming it into a beacon of organized productivity and development."
 # ------------------------------------------------------------
 # Gamestart deposits
 # ------------------------------------------------------------
