--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -413,10 +413,11 @@
 
 	tr_tec_centrality_finish:0 "$tradition_tec_centrality$ Traditions Finished"
 	tr_tec_centrality_finish_gestalt:0 "$tradition_tec_centrality$ Traditions Finished"
-	tr_tec_centrality_finish_tooltip:4 "$tec_loc_section_core_sector_and_administrated$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime$: §R+10§!\n$t$- $tec_loc_trade_value$: §R-10%§!\n$t$- This effect scales with distance from §Y£empire£Core Sector§!"
-	tr_tec_centrality_finish_gestalt_tooltip:4 "$tec_loc_section_core_sector_and_administrated$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime_gestalt$: §R+20§!\n$t$- This effect scales with distance from §Y£empire£Core Sector§!"
+	tr_tec_centrality_finish_tooltip:4 "$tec_loc_section_unlock_agenda$ $council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_name$\n\n$tec_loc_section_core_sector_and_administrated$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime$: §R+10§!\n$t$- $tec_loc_trade_value$: §R-10%§!\n$t$- This effect scales with distance from §Y£empire£Core Sector§!"
+	tr_tec_centrality_finish_gestalt_tooltip:4 "$tec_loc_section_unlock_agenda$ $council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_name$\n\n$tec_loc_section_core_sector_and_administrated$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime_gestalt$: §R+20§!\n$t$- This effect scales with distance from §Y£empire£Core Sector§!"
 	tr_tec_centrality_finish_tooltip_OLD:4 "Unlocks §YRim/Core World Designations§!.\n\n§H''Core-World designations are special colony designations for a limited amount of worlds inside the core sector which greatly increase the productivity of those planets.''\nRim-World designations are special colony designations for worlds outside the core sector, alleviating the bureaucratic charge on those worlds in exchange of production and increased crime.''§!\n"
 
+	tr_statecraft_inspiring_agendas_desc:1 "§YUnlocks Agenda:§! $council_agenda_agenda_rightful_claims_name$\n§YUnlocks Agenda:§! $council_agenda_agenda_oppose_the_fallen_name$"
 
 	tr_tec_centrality_1:0 "Core Authority"
 	tr_tec_centrality_1_tooltip:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- $MOD_POP_POLITICAL_POWER$ from Living Standards: §G+50%§!\n\n$tec_loc_section_rim_sector$\n$t$- $MOD_POP_POLITICAL_POWER$ from Living Standards: §R-50%§!"
