--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -1016,7 +1016,7 @@ todo_ascension:0 ""
 	situation_tec_ascension_technoorganic_bioware_t1_approach_fast_string:0 "$situation_tec_ascension_technoorganic_neutral_t1_approach_fast$"
  # /
  # --------------- T2 Cyborgs
- #situation_tec_ascension_technoorganic_cybernetics_t2
+ #situation_tec_ascension_cybernetics_t2
 
  # /
  # --------------- T1 Bioware
@@ -1447,7 +1447,7 @@ todo_ascension:0 ""
 
 	situation_tec_ascension_replicant_t2_upgrader_science:0 "$todo_ascension$"
 	situation_tec_ascension_replicant_t2_upgrader_unity:0 "$todo_ascension$"
-	situation_tec_ascension_replicant_t2_upgrader_naval:0 "$todo_ascension$"
+	situation_tec_ascension_replicant_t2_upgrader_military:0 "$todo_ascension$"
 	situation_tec_ascension_replicant_t2_upgrader_assembly:0 "$todo_ascension$"
 	situation_tec_ascension_replicant_t2_upgrader_industrial:0 "$todo_ascension$"
 	situation_tec_ascension_replicant_t2_upgrader_menial:0 "$todo_ascension$"
@@ -1513,27 +1513,27 @@ todo_ascension:0 ""
 
 # Unsorted
 
-	situation_tec_ascension_technoorganic_cybernetics_t2:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_type:0 "$situation_tec_ascension_technoorganic_cybernetics_t2$"
-	situation_tec_ascension_technoorganic_cybernetics_t2_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_fail_tooltip:0 "$tec_situation_impossible_fail$"
-	situation_tec_ascension_technoorganic_cybernetics_t2_end_tooltip:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_monthly_change_tooltip:0 "$tec_situation_monthly_change$"
+	situation_tec_ascension_cybernetics_t2:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_type:0 "$situation_tec_ascension_cybernetics_t2$"
+	situation_tec_ascension_cybernetics_t2_desc:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_fail_tooltip:0 "$tec_situation_impossible_fail$"
+	situation_tec_ascension_cybernetics_t2_end_tooltip:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_monthly_change_tooltip:0 "$tec_situation_monthly_change$"
 
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_slow:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_slow_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_slow_string:0 "$situation_tec_ascension_technoorganic_cybernetics_t2_approach_slow$"
+	situation_tec_ascension_cybernetics_t2_approach_slow:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_approach_slow_desc:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_approach_slow_tooltip:0 "$tec_ascension_approach_slow_risk$"
+	situation_tec_ascension_cybernetics_t2_approach_slow_string:0 "$situation_tec_ascension_cybernetics_t2_approach_slow$"
 
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_standard:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_standard_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_standard_string:0 "$situation_tec_ascension_technoorganic_cybernetics_t2_approach_standard$"
+	situation_tec_ascension_cybernetics_t2_approach_standard:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_approach_standard_desc:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_approach_standard_tooltip:0 "$tec_ascension_approach_standard_risk$"
+	situation_tec_ascension_cybernetics_t2_approach_standard_string:0 "$situation_tec_ascension_cybernetics_t2_approach_standard$"
 
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast_desc:0 "TODO ASCENSION"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
-	situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast_string:0 "$situation_tec_ascension_technoorganic_cybernetics_t2_approach_fast$"
+	situation_tec_ascension_cybernetics_t2_approach_fast:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_approach_fast_desc:0 "TODO ASCENSION"
+	situation_tec_ascension_cybernetics_t2_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
+	situation_tec_ascension_cybernetics_t2_approach_fast_string:0 "$situation_tec_ascension_cybernetics_t2_approach_fast$"
 
 	situation_tec_ascension_technoorganic_bioware_t2:0 "TODO ASCENSION"
 	situation_tec_ascension_technoorganic_bioware_t2_type:0 "$situation_tec_ascension_technoorganic_bioware_t2$"
@@ -1955,7 +1955,7 @@ todo_ascension:0 ""
 	tec_gene_path.20090.desc.hive:0 "With the perfected gene strain near completely distributed to our drone breeds, we are trying to devise a future distribution and deployment of future strains and therapies.\n\nA new complete system has been devised for improvement of genetic code, a way to §YRecombine§! positive traits and effects in an optimal way which, when paired with a distinctive distribution method, will greatly increase the efficiency of future changes in the entire collective, and even galactic scale."
 	tec_gene_path.20090.output.regular:0 "Distribute §YEnhancement Therapies§!"
 	tec_gene_path.20090.output.regular.tooltip:0 "Our £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ will §GIncrease§! $tec_loc_organic_job_output$ locally on each §Y$tec_loc_planet$§!.\n\n$tec_unlock_agenda_tec_genetic_recombination$"
-	tec_gene_path.20090.genemod.regular:0 "Focus on §YGenetic Modifications§!"
+	tec_gene_path.20090.genemod.regular:0 "Focus on §YStreamlined Modifications§!"
 	tec_gene_path.20090.genemod.regular.tooltip:0 "Our £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ will §GReduce§! the $tec_loc_species_modification$ cost in the whole §Y$tec_loc_empire$§!.\n\n$tec_unlock_agenda_tec_genetic_recombination$"
 	tec_gene_path.20090.growth.regular:0 "Engineer §YPopulation Boosters§!"
 	tec_gene_path.20090.growth.regular.tooltip:0 "Our £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ will §GIncrease§! the $tec_loc_organic_assembly$ locally on each §Y$tec_loc_planet$§!.\n\n$tec_unlock_agenda_tec_genetic_recombination$"
