--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -44,7 +44,9 @@
 	tec_loc_cg:0 "$tec_loc_consumer_goods$"
 	tec_loc_cgs:0 "$tec_loc_consumer_goods$"
 	tec_loc_unity:0 "£unity£ Unity"
+	tec_loc_unity_icon:0 "£unity£"
 	tec_loc_influence:0 "£influence£ Influence"
+	tec_loc_influence_icon:0 "£influence£"
 
 	tec_loc_alloys_and_energy:0 "$tec_loc_alloys$ and $tec_loc_energy$"
 	tec_loc_alloys_and_minerals:0 "$tec_loc_alloys$ and $tec_loc_minerals$"
