--- a/localisation/english/replace/zzzzzz_evolved_full_replace_l_english.yml
+++ b/localisation/english/replace/zzzzzz_evolved_full_replace_l_english.yml
@@ -5,5 +5,5 @@
 # Habitats
 # ------------------------------------------------------------
  mod_planet_district_tec_hab_food_build_speed_mult: "$district_tec_hab_food$ Build Speed"
- mod_district_tec_hab_food_max: "Hydroponic $tec_loc_food$ Production"
+ mod_district_tec_hab_food_max: "Hydroponic $tec_loc_food$ districts available"
 
