--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -23,13 +23,39 @@ l_english:
 	building_tec_branch_tier_1_tag: "§HTier 1§!"
 	building_tec_branch_tier_2_tag: "§HTier 2§!"
 	building_tec_branch_tier_3_tag: "§HTier 3§!"
+
+	building_tec_building_tier_1_tag: "§HTier 1§!"
+	building_tec_building_tier_2_tag: "§HTier 2§!"
+	building_tec_building_tier_3_tag: "§HTier 3§!"
+	building_tec_building_tier_4_tag: "§HTier 4§!"
+	building_tec_building_tier_5_tag: "§HTier 5§!"
+
+	building_tec_booster_building_tag: "\n['concept_tec_booster_building']"
+	building_tec_booster_building_military_tag: "§E$building_tec_booster_building_tag$ (£mod_country_naval_cap_add£ Military)§!"
+	building_tec_booster_building_research_tag: "§E$building_tec_booster_building_tag$ ($tec_loc_research_resources$)§!"
+	building_tec_booster_building_unity_tag: "§E$building_tec_booster_building_tag$ ($tec_loc_unity$)§!"
+	building_tec_reprocessing_building_tag: "\n['concept_tec_reprocessing_building']"
+	building_tec_reprocessing_building_minerals_tag: "§E$building_tec_reprocessing_building_tag$ ($tec_loc_minerals$)§!"
+	building_tec_reprocessing_building_food_tag: "§E$building_tec_reprocessing_building_tag$ ($tec_loc_food$)§!"
+	building_tec_reprocessing_building_energy_tag: "§E$building_tec_reprocessing_building_tag$ ($tec_loc_energy$)§!"
+	building_tec_manufacturing_building_tag: "\n['concept_tec_manufacturing_building']"
+	building_tec_manufacturing_building_factory_tag: "§E$building_tec_manufacturing_building_tag$ ($tec_loc_consumer_goods$)§!"
+	building_tec_manufacturing_building_foundry_tag: "§E$building_tec_manufacturing_building_tag$ ($tec_loc_alloys$)§!"
+	building_tec_manufacturing_booster_building_tag: "\n['concept_tec_manufacturing_booster_building']"
+	building_tec_manufacturing_booster_building_industrial_tag: "§E$building_tec_manufacturing_booster_building_tag$ ($tec_loc_industrial_resources$)§!"
+	building_tec_manufacturing_booster_building_refinery_tag: "§E$building_tec_manufacturing_booster_building_tag$ ($tec_loc_strategic_resources$)§!"
+	building_tec_leader_building_tag: "\n['concept_tec_leader_building']"
+	building_tec_leader_building_official_tag: "§E$building_tec_leader_building_tag$ ($tec_loc_leader_official$)§!"
+	building_tec_leader_building_scientist_tag: "§E$building_tec_leader_building_tag$ ($tec_loc_leader_scientist$)§!"
+	building_tec_leader_building_commander_tag: "§E$building_tec_leader_building_tag$ ($tec_loc_leader_commander$)§!"
  # /
 
  # Utilities
-	tec_building_ascension_scaling:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- The number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n\n"
-	tec_building_ascension_scaling_leader_official:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_official$§!.\n\n"
-	tec_building_ascension_scaling_leader_commander:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_commander$§!.\n\n"
-	tec_building_ascension_scaling_leader_scientist:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_scientist$§!.\n\n"
+	tec_building_ascension_scaling:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency§!\n- The number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n\n"
+
+	tec_building_ascension_scaling_leader_official:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_official$§!.\n\n"
+	tec_building_ascension_scaling_leader_commander:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_commander$§!.\n\n"
+	tec_building_ascension_scaling_leader_scientist:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_scientist$§!.\n\n"
  # /
 
  # Modifiers
