Habitat food district fix 2 + more ascension things

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -968,11 +968,43 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_negative_thoughts_desc:0 "§LThis species is prone to negative, pessimistic and nihilistic thoughts.§!"
 	TRAIT_TEC_NEGATIVE_THOUGHTS_EFFECT:0 "Can suffer §RReduced§! Happiness whenever something §YNegative§! happens to the empire"
 
+	# Trade
+	trait_tec_squanderer:0 "Squanderer"
+	trait_tec_squanderer_desc:0 "§LThe moment this species get some kind of wealth or riches, it has the impulse to completely waste it away in the most surprising ways.§!"
+	trait_tec_squanderer_effect:0 "TODO TRAIT"
+
 	trait_tec_indulgent:0 "Indulgent"
 	trait_tec_indulgent_desc:0 "§LWhen it comes to creating, moving and spending cash, this species rocks! Excessive purchases, strict advertisement follow-ups and dexterity when buying whatever they need, or not.§!"
+	trait_tec_indulgent_effect:0 "TODO TRAIT"
 
 	trait_tec_austere:0 "Austere"
 	trait_tec_austere_desc:0 "§LAdapted to a simple life, this species try to avoid wasting any excess of income, living with the minimal amount possible.§!"
+	trait_tec_austere_effect:0 "TODO TRAIT"
+
+	# Upkeeps
+	trait_tec_ravenous:0 "Ravenous"
+	trait_tec_ravenous_desc:0 "§LThis species has a constant need of feeding, reaching even higher levels of hostility for that purpose.§!"
+	trait_tec_ravenous_effect:0 "TODO TRAIT species base resource upkeep +100%"
+
+	trait_tec_voracious:0 "Voracious"
+	trait_tec_voracious_desc:0 "§LThis species highly active metabolism require a constant nurturing in order to function, leading to continuous feeding frenzies.§!"
+	trait_tec_voracious_effect:0 "TODO TRAIT species base resource upkeep +50%"
+
+	trait_tec_gluttons:0 "Gluttons"
+	trait_tec_gluttons_desc:0 "§LThe unmeasured consumption of resources for feeding purposes is a common practice for this species.§!"
+	trait_tec_gluttons_effect:0 "TODO TRAIT species base resource upkeep +25%"
+
+	trait_tec_efficient_metabolism:0 "Efficient Metabolism"
+	trait_tec_efficient_metabolism_desc:0 "§LThis species organism works at an efficient metabolic level, able to sustain itself for longer with lower fed income.§!"
+	trait_tec_efficient_metabolism_effect:0 "TODO TRAIT species base resource upkeep -25%"
+
+	trait_tec_catabolic_energization:0 "Catabolic Energization"
+	trait_tec_catabolic_energization_desc:0 "§LA very efficient and streamlined metabolic process makes this species organism extract all possible nutrients of anything they consume.§!"
+	trait_tec_catabolic_energization_effect:0 "TODO TRAIT species base resource upkeep -50%"
+
+	# Amenities
+	trait_tec_fragile:0 "Fragile"
+	trait_tec_fragile_desc:0 "§LWhile not physically weak per se, this species require of extreme measures, practices and conditioning for surviving, as its organism is inherently difficult to maintain and prone to physical and mental illnesses.§!"
  # /
 
  # --------------- Robotic
