Robotic trait adjustments

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1002,9 +1002,35 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_catabolic_energization_desc:0 "§LA very efficient and streamlined metabolic process makes this species organism extract all possible nutrients of anything they consume.§!"
 	trait_tec_catabolic_energization_effect:0 "TODO TRAIT species base resource upkeep -50%"
 
+	# Upkeeps machine
+	trait_tec_robot_extreme_upkeep:0 "Overcharged Circuitry"
+	trait_tec_robot_extreme_upkeep_desc:0 "§LThe circuitry conforming the platforms of these units are extremely inefficient when it comes to material usage.§!"
+	trait_tec_robot_extreme_upkeep_effect:0 "TODO TRAIT increases species upkeep even more"
+
+	trait_tec_robot_low_upkeep:0 "Streamlined Circuitry"
+	trait_tec_robot_low_upkeep_desc:0 "§LThese units have highly efficient material and energy demands.§!"
+	trait_tec_robot_low_upkeep_effect:0 "TODO TRAIT reduce species upkeep even more"
+
 	# Amenities
 	trait_tec_fragile:0 "Fragile"
 	trait_tec_fragile_desc:0 "§LWhile not physically weak per se, this species require of extreme measures, practices and conditioning for surviving, as its organism is inherently difficult to maintain and prone to physical and mental illnesses.§!"
+
+	# Amenities machine
+	trait_tec_robot_extreme_maintenance:0 "Defective Serialization"
+	trait_tec_robot_extreme_maintenance_desc:0 "§LSeveral design and production flaws constitute a constant need of maintenance for these artificial units.§!"
+	trait_tec_robot_extreme_maintenance_effect:0 "TODO TRAIT increases species amenities usage even more"
+
+	trait_tec_robot_increased_maintenance:0 "Faulty Parts"
+	trait_tec_robot_increased_maintenance_desc:0 "§LThese robotic units are prone to localized faults at some of their components.§!"
+	trait_tec_robot_increased_maintenance_effect:0 "TODO TRAIT increases species amenities usage"
+
+	trait_tec_robot_low_maintenance:0 "Interchangeable Modules"
+	trait_tec_robot_low_maintenance_desc:0 "§LConstructed with a modular efficient model, these units have low maintenance profiles due to interchangeable parts.§!"
+	trait_tec_robot_low_maintenance_effect:0 "TODO TRAIT reduces amenities usage"
+
+	trait_tec_robot_minimal_maintenance:0 "Self-Repairing Probes"
+	trait_tec_robot_minimal_maintenance_desc:0 "§LThe artificial body of these units is able to procedural maintenance protocols, repairing itself with efficiency.§!"
+	trait_tec_robot_minimal_maintenance_effect:0 "TODO TRAIT reduces amenities usage and increases army health"
  # /
 
  # --------------- Robotic
